--- a/src/main/resources/templates/construct/construct-home.html
+++ b/src/main/resources/templates/construct/construct-home.html
@@ -87,6 +87,7 @@
         <small class="text-muted">4. 한국소방시설협회</small><br>
         위 네 곳에서 제공하는 건설 업체 데이터 조회 및 Google Sheet 저장이 가능합니다.
     </p>
+    <button id="google-sheet-button" type="button" class="btn btn-lg btn-block btn-outline-primary col-4">Google Sheet 으로 이동하기</button>
 </div>
 
 <div class="container">
@@ -191,6 +192,12 @@
     document.getElementById('ekffa-button').addEventListener('click', function() {
         window.location.href = 'http://gangsan21-ocr.site/construct/ekffa';
     });
+
+    // Google Sheets 이동 버튼
+    document.getElementById('google-sheet-button').addEventListener('click', function() {
+        window.location.href = 'https://docs.google.com/spreadsheets/d/1zccSFdH0cgYYPTq4eewBU3m6QRDAVD5qBthEWWagt8E/edit#gid=0';
+    });
+
 </script>
 
 </body>
