--- a/src/main/resources/templates/construct/ekffa-form.html
+++ b/src/main/resources/templates/construct/ekffa-form.html
@@ -59,7 +59,10 @@
     <div class="row">
         <div class="col">
             <form id="downloadForm" action="/construct/info/ekffa/download" method="get">
-                <h3>파라미터가 요구되지 않는 API 입니다. (바로 실행 가능)</h3>
+                <h3>
+                    파라미터가 요구되지 않는 API 입니다. (바로 실행 가능)<br>
+                    해당 사이트의 서버 환경에 따라 웹 크롤링 과정에서 시간이 소요됩니다. (약 10 ~ 15분)
+                </h3>
                 <button type="button" class="btn btn-custom" data-toggle="modal" data-target="#confirmationModal">Google Sheet 에 저장하기</button>
             </form>
         </div>
