--- a/src/main/resources/templates/construct/construct-home.html
+++ b/src/main/resources/templates/construct/construct-home.html
@@ -87,7 +87,13 @@
         <small class="text-muted">4. 한국소방시설협회</small><br>
         위 네 곳에서 제공하는 건설 업체 데이터 조회 및 Google Sheet 저장이 가능합니다.
     </p>
-    <button id="google-sheet-button" type="button" class="btn btn-lg btn-block btn-outline-primary">Google Sheet 으로 이동하기</button>
+    <div class="container">
+        <div class="row">
+            <div class="col-6"> <!-- Adjust the col-6 to col-x where x is the desired column width -->
+                <button id="google-sheet-button" type="button" class="btn btn-lg btn-outline-primary btn-block">Google Sheet 으로 이동하기</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="container">
