--- a/src/main/resources/templates/construct/construct-home.html
+++ b/src/main/resources/templates/construct/construct-home.html
@@ -81,16 +81,27 @@
 <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">건설업체 조회</h1>
     <p class="lead">
-        <small class="text-muted">1. 국토교통부-Kiscon</small><br>
-        <small class="text-muted">2. 한국전기공사협회</small><br>
-        <small class="text-muted">3. 한국정보통신공사협회</small><br>
-        <small class="text-muted">4. 한국소방시설협회</small><br>
+        <a href="https://www.kiscon.net/gongsi/gongsi_list.asp">
+            <small class="text-muted">1. 국토교통부-Kiscon</small>
+        </a><br>
+        <a href="https://ictis.kica.or.kr/construct/assessment/compSearch#searchSido=&searchType=1&searchText=&size=10&pageNumber=1">
+            <small class="text-muted">2. 한국정보통신공사협회</small>
+        </a><br>
+        <a href="https://www.keca.or.kr/ecic/ad/ad0101.do?menuCd=6047">
+            <small class="text-muted">3. 한국전기공사협회</small>
+        </a><br>
+        <a href="https://www.ekffa.or.kr/fe/member/NR_listCompany.do?upKindcode=10&_m=41">
+            <small class="text-muted">4. 한국소방시설협회</small>
+        </a><br>
+<!--        <small class="text-muted">2. 한국전기공사협회</small><br>-->
+<!--        <small class="text-muted">3. 한국정보통신공사협회</small><br>-->
+<!--        <small class="text-muted">4. 한국소방시설협회</small><br>-->
         위 네 곳에서 제공하는 건설 업체 데이터 조회 및 Google Sheet 저장이 가능합니다.
     </p>
     <div class="container">
         <div class="row">
-            <div class="col-6"> <!-- Adjust the col-6 to col-x where x is the desired column width -->
-                <button id="google-sheet-button" type="button" class="btn btn-lg btn-outline-primary btn-block">Google Sheet 으로 이동하기</button>
+            <div class="col-auto"> <!-- Adjust the col-6 to col-x where x is the desired column width -->
+                <button id="google-sheet-button" type="button" class="btn btn-lg btn-outline-primary btn-block">종합 Google Sheet 으로 이동</button>
             </div>
         </div>
     </div>
