https -> http 변경

--- a/src/main/resources/templates/construct/ecic-form.html
+++ b/src/main/resources/templates/construct/ecic-form.html
@@ -75,7 +75,7 @@
                 비즈센터동 7층 706호<br><br>
                 [지번] 경기도 성남시 중원구 상대원동 190-1<br>
                 비즈센터동 7층 706호</p><br>
-            <p>WEB: <a href="https://www.gangsan21.com">www.gangsan21.com</a></p>
+            <p>WEB: <a href="http://www.gangsan21.com">www.gangsan21.com</a></p>
             <p>TEL: 02-2157-8338</p>
             <p>FAX: 02-2179-8133</p>
             <p>Blog: <a href="https://blog.naver.com/ghskfen347">blog.naver.com/ghskfen347</a> </p>
