--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,7 +16,7 @@
     <br><br>
     <div class="row">
         <div class="col">
-            <h3>예상치 못한 에러가 발생 했습니다. <br> 적절한 이미지 파일을 업로드 했는지 확인해주세요.</h3>
+            <h3>예상치 못한 에러가 발생 했습니다.</h3>
             <h4>
                 개발자 연락처 <br>
                 TEL: 010-2532-4903 <br>
